Fixed #11529 - Showcase | Missing padding bottom on left menu

--- a/src/assets/showcase/styles/app/_menu.scss
+++ b/src/assets/showcase/styles/app/_menu.scss
@@ -26,6 +26,7 @@
 
     .layout-menu {
         padding: 0 2rem;
+        padding-bottom: 2rem;
         overflow-y: auto;
         flex-grow: 1;
 
